--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -388,7 +388,20 @@ body.menu-open {
 }
 
 
+.placeholder {
+  background: rgba(255, 255, 255, 0.15);
+  border: 2px dashed var(--primary-color);
+  margin: 5px 0;
+  border-radius: 8px;
+}
 
+  .dragging-active {
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+  transform: scale(1.05);
+  transition: transform 0.1s ease, box-shadow 0.1s ease;
+  z-index: 999;
+  position: relative;
+}
 
 
   </style>
@@ -436,7 +449,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home 13 </span>
+        <span>Home</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -758,6 +771,7 @@ async function handleReorder(title, date, newUserOrder) {
 
 
 
+
 async function loadTasks() {
   try {
     const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
@@ -791,8 +805,8 @@ async function loadTasks() {
 
     Object.keys(tasksByTitle).forEach(title => {
       const task = tasksByTitle[title];
-      const rotation = calculateTurn(task, selectedDate);
-      const turns = prepareTaskTurnData(task, selectedDate);
+      const rotation = calculateTurn(task, selectedDate);   // ✅ Get Current Turn, Next, Completed
+      const turns = prepareTaskTurnData(task, selectedDate); // ✅ Get full turn list
       const date = task.date;
 
       const div = document.createElement("div");
@@ -803,36 +817,13 @@ async function loadTasks() {
       div.innerHTML = `
         <h3 class="task-title">${title}</h3>
         <div class="task-meta">
-          ${
-            task.settings && task.settings.includes("Individual") ? `
-              <p><strong>Individual Progress:</strong></p>
-              ${
-                task.users.map(user => {
-                  const count = Array.isArray(task.completions?.[selectedDate]) 
-                    ? task.completions[selectedDate].filter(u => u === user).length 
-                    : 0;
-                  const required = task.repeat === "Daily" ? (task.timesPerDay || 1)
-                                : task.repeat === "Weekly" ? (task.timesPerWeek || 1)
-                                : task.repeat === "Monthly" ? (task.timesPerMonth || 1)
-                                : 1;
-                  const check = count >= required ? "✅" : "";
-                  return `<p>${user}: ${count}/${required} ${check}</p>`;
-                }).join('')
-              }
-            `
-            : task.settings && task.settings.includes("Rotation") ? `
-              <p><strong>Current Turn:</strong> ${rotation.currentTurn}</p>
-              <p><strong>Next:</strong> ${rotation.nextUser}</p>
-              <p><strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}</p>
-            `
-            : `
-              <p><em>No rotation logic.</em></p>
-            `
-          }
+          <p><strong>Current Turn:</strong> ${rotation.currentTurn}</p>
+          <p><strong>Next:</strong> ${rotation.nextUser}</p>
+          <p><strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}</p>
         </div>
         <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
           ${
-            turns.length && task.settings.includes("Rotation")
+            turns.length
               ? turns.map((turn, index) => `
                 <div class="turn-entry" data-index="${index}" data-user="${turn.user}">
                   <p>Turn ${turn.repetition}: ${turn.user} - ${
@@ -862,17 +853,16 @@ async function loadTasks() {
                   }
                 </div>
               `).join('')
-              : '<p>No turn entries.</p>'
+              : '<p>No turns assigned.</p>'
           }
         </div>
       `;
 
       container.appendChild(div);
+      
+ // 🛠 Move this INSIDE the loop:
+ enableDragAndDrop(div);
 
-      // Only enable drag-and-drop if it's a Rotation task
-      if (task.settings.includes("Rotation")) {
-        enableDragAndDrop(div);
-      }
 
       div.querySelector(".task-title").addEventListener("click", () => {
         const details = div.querySelector(".task-details");
@@ -884,6 +874,7 @@ async function loadTasks() {
         }
       });
     });
+    
 
     if (!container.innerHTML) {
       container.innerHTML = "<p>No tasks for this date.</p>";
@@ -895,6 +886,99 @@ async function loadTasks() {
 }
 
 
+
+function enableDragAndDrop(taskDiv) {
+  let draggedItem = null;
+  let container = null;
+  let placeholder = null;
+
+  const turnEntries = taskDiv.querySelectorAll(".turn-entry");
+
+  turnEntries.forEach(entry => {
+    entry.draggable = false;
+    entry.style.userSelect = "none";
+    container = entry.parentNode;
+
+    entry.addEventListener("mousedown", startDrag);
+    entry.addEventListener("touchstart", startDrag, { passive: false });
+  });
+
+  function startDrag(e) {
+    e.preventDefault();
+    draggedItem = e.currentTarget;
+    container = draggedItem.parentNode;
+
+    placeholder = document.createElement("div");
+    placeholder.className = "turn-entry";
+    placeholder.style.height = `${draggedItem.offsetHeight}px`;
+    placeholder.style.background = "rgba(255, 255, 255, 0.1)";
+    placeholder.style.border = "2px dashed var(--primary-color)";
+    placeholder.style.borderRadius = "8px";
+
+    draggedItem.parentNode.insertBefore(placeholder, draggedItem.nextSibling);
+
+    draggedItem.classList.add("dragging-active");
+
+    document.addEventListener("mousemove", onDrag);
+    document.addEventListener("touchmove", onDrag, { passive: false });
+    document.addEventListener("mouseup", endDrag);
+    document.addEventListener("touchend", endDrag);
+  }
+
+  function onDrag(e) {
+    if (!draggedItem) return;
+
+    const y = e.touches ? e.touches[0].clientY : e.clientY;
+    draggedItem.style.position = "absolute";
+    draggedItem.style.zIndex = "1000";
+    draggedItem.style.pointerEvents = "none";
+    draggedItem.style.width = `${placeholder.offsetWidth}px`;
+    draggedItem.style.left = `${placeholder.getBoundingClientRect().left}px`;
+    draggedItem.style.top = `${y - placeholder.offsetHeight / 2}px`;
+
+    const entries = Array.from(container.children).filter(el => el !== draggedItem && el !== placeholder);
+
+    for (const entry of entries) {
+      const rect = entry.getBoundingClientRect();
+      const middleY = rect.top + rect.height / 2;
+
+      if (y < middleY) {
+        container.insertBefore(placeholder, entry);
+        break;
+      } else if (entry === entries[entries.length - 1]) {
+        container.appendChild(placeholder);
+      }
+    }
+  }
+
+  function endDrag() {
+    if (!draggedItem) return;
+
+    draggedItem.classList.remove("dragging-active");
+
+    draggedItem.style.position = "";
+    draggedItem.style.top = "";
+    draggedItem.style.left = "";
+    draggedItem.style.zIndex = "";
+    draggedItem.style.pointerEvents = "";
+    draggedItem.style.width = "";
+
+    container.insertBefore(draggedItem, placeholder);
+    placeholder.remove();
+    placeholder = null;
+    draggedItem = null;
+
+    document.removeEventListener("mousemove", onDrag);
+    document.removeEventListener("touchmove", onDrag);
+    document.removeEventListener("mouseup", endDrag);
+    document.removeEventListener("touchend", endDrag);
+
+    const newOrder = Array.from(container.children).map(el => el.dataset.user);
+    const title = taskDiv.dataset.title;
+    const date = taskDiv.dataset.date;
+    handleReorder(title, date, newOrder);
+  }
+}
 
 
 
@@ -986,3 +1070,4 @@ fetchUsers().then(() => generateScrollableDates());
 
 </body>
 </html>
+
