--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -142,13 +142,6 @@
       cursor: move;
       border: 2px solid transparent;
     }
-    .turn-entry.dragging {
-      opacity: 0.7;
-      border: 2px solid #FFC107;
-    }
-    .turn-entry.drag-over {
-      border: 2px dashed #FFC107;
-    }
     .turn-entry p {
       margin: 5px 0;
     }
@@ -388,21 +381,6 @@ body.menu-open {
 }
 
 
-.placeholder {
-  background: rgba(255, 255, 255, 0.15);
-  border: 2px dashed var(--primary-color);
-  margin: 5px 0;
-  border-radius: 8px;
-}
-
-  .dragging-active {
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-  transform: scale(1.05);
-  transition: transform 0.1s ease, box-shadow 0.1s ease;
-  z-index: 999;
-  position: relative;
-}
-
 
   </style>
 
@@ -449,7 +427,7 @@ body.menu-open {
   <div class="footer">
     <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
         <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-        <span>Home</span>
+        <span>Home 1</span>
     </a>
     <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
         <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
@@ -772,6 +750,8 @@ async function handleReorder(title, date, newUserOrder) {
 
 
 
+
+
 async function loadTasks() {
   try {
     const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
@@ -783,98 +763,65 @@ async function loadTasks() {
     const container = document.getElementById("taskContainer");
     container.innerHTML = "";
 
-    const tasksByTitle = {};
-    tasks.forEach(task => {
-      if (!task.title || !task.users || !task.date) return;
+    const tasksForUser = tasks.filter(task => {
+      if (!task.title || !task.users || !task.date) return false;
 
       const [startDateStr, endDateStr] = task.date.split(" to ");
       const startDate = new Date(startDateStr);
       const endDate = new Date(endDateStr || "3000-01-01");
       const currentDate = new Date(selectedDate);
-      if (currentDate < startDate || currentDate > endDate) return;
 
-      tasksByTitle[task.title] = {
-        ...task,
-        startDate,
-        settings: task.settings || "Rotation",
-        completions: task.completions || {},
-        pendingCompletions: task.pendingCompletions || {},
-        tempTurnReplacement: task.tempTurnReplacement || {}
-      };
+      // Only include tasks for the selected user
+      return (
+        currentDate >= startDate &&
+        currentDate <= endDate &&
+        task.users.includes(userName)
+      );
     });
 
-    Object.keys(tasksByTitle).forEach(title => {
-      const task = tasksByTitle[title];
-      const rotation = calculateTurn(task, selectedDate);   // ✅ Get Current Turn, Next, Completed
-      const turns = prepareTaskTurnData(task, selectedDate); // ✅ Get full turn list
-      const date = task.date;
-
+    tasksForUser.forEach(task => {
       const div = document.createElement("div");
       div.className = "task-entry";
-      div.dataset.title = title;
-      div.dataset.date = date;
+      div.dataset.title = task.title;
+      div.dataset.date = task.date;
+
+      const status = task.pendingCompletions?.[selectedDate]?.includes(userName)
+        ? "Waiting for Review"
+        : task.completions?.[selectedDate]?.includes(userName)
+        ? "Accepted"
+        : "Pending";
 
       div.innerHTML = `
-        <h3 class="task-title">${title}</h3>
+        <h3 class="task-title">${task.title}</h3>
         <div class="task-meta">
-          <p><strong>Current Turn:</strong> ${rotation.currentTurn}</p>
-          <p><strong>Next:</strong> ${rotation.nextUser}</p>
-          <p><strong>Completed:</strong> ${rotation.completedCount}/${rotation.repeatLimit}</p>
+          <p><strong>Status:</strong> ${status}</p>
         </div>
-        <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
+        <div class="task-details${expandedTasks.has(task.title) ? ' show' : ''}">
           ${
-            turns.length
-              ? turns.map((turn, index) => `
-                <div class="turn-entry" data-index="${index}" data-user="${turn.user}">
-                  <p>Turn ${turn.repetition}: ${turn.user} - ${
-                    turn.isCompleted
-                      ? 'Accepted'
-                      : turn.isPending
-                        ? 'Waiting for Review'
-                        : 'Pending'
-                  }</p>
-                  ${
-                    turn.isPending && !turn.isCompleted
-                      ? `
-                        <button class="accept-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'accept', '${turn.user}', event)">Accept</button>
-                        <button class="decline-btn" onclick="handleDecision('${title}', '${date}', ${index}, 'decline', '${turn.user}', event)">Decline</button>
-                      `
-                      : turn.isCompleted
-                        ? `
-                          <button class="revert-btn" onclick="handleRevert('${title}', '${date}', ${index}, '${turn.user}', event)">Revert</button>
-                        `
-                        : `
-                          <select id="replace-select-${index}">
-                            <option value="">Select User</option>
-                            ${allUsers.map(u => `<option value="${u}">${u}</option>`).join('')}
-                          </select>
-                          <button class="replace-btn" onclick="handleReplace('${title}', '${date}', ${index}, '${turn.user}', event)">Replace</button>
-                        `
-                  }
-                </div>
-              `).join('')
-              : '<p>No turns assigned.</p>'
+            status === "Waiting for Review"
+              ? `
+                <button class="accept-btn" onclick="handleDecision('${task.title}', '${task.date}', 0, 'accept', '${userName}', event)">Accept</button>
+                <button class="decline-btn" onclick="handleDecision('${task.title}', '${task.date}', 0, 'decline', '${userName}', event)">Decline</button>
+              `
+              : status === "Accepted"
+                ? `<button class="revert-btn" onclick="handleRevert('${task.title}', '${task.date}', 0, '${userName}', event)">Revert</button>`
+                : `<p>No actions available.</p>`
           }
         </div>
       `;
 
       container.appendChild(div);
-      
- // 🛠 Move this INSIDE the loop:
- enableDragAndDrop(div);
-
 
       div.querySelector(".task-title").addEventListener("click", () => {
         const details = div.querySelector(".task-details");
         details.classList.toggle("show");
         if (details.classList.contains("show")) {
-          expandedTasks.add(title);
+          expandedTasks.add(task.title);
         } else {
-          expandedTasks.delete(title);
+          expandedTasks.delete(task.title);
         }
       });
     });
-    
 
     if (!container.innerHTML) {
       container.innerHTML = "<p>No tasks for this date.</p>";
@@ -887,98 +834,8 @@ async function loadTasks() {
 
 
 
-function enableDragAndDrop(taskDiv) {
-  let draggedItem = null;
-  let container = null;
-  let placeholder = null;
 
-  const turnEntries = taskDiv.querySelectorAll(".turn-entry");
 
-  turnEntries.forEach(entry => {
-    entry.draggable = false;
-    entry.style.userSelect = "none";
-    container = entry.parentNode;
-
-    entry.addEventListener("mousedown", startDrag);
-    entry.addEventListener("touchstart", startDrag, { passive: false });
-  });
-
-  function startDrag(e) {
-    e.preventDefault();
-    draggedItem = e.currentTarget;
-    container = draggedItem.parentNode;
-
-    placeholder = document.createElement("div");
-    placeholder.className = "turn-entry";
-    placeholder.style.height = `${draggedItem.offsetHeight}px`;
-    placeholder.style.background = "rgba(255, 255, 255, 0.1)";
-    placeholder.style.border = "2px dashed var(--primary-color)";
-    placeholder.style.borderRadius = "8px";
-
-    draggedItem.parentNode.insertBefore(placeholder, draggedItem.nextSibling);
-
-    draggedItem.classList.add("dragging-active");
-
-    document.addEventListener("mousemove", onDrag);
-    document.addEventListener("touchmove", onDrag, { passive: false });
-    document.addEventListener("mouseup", endDrag);
-    document.addEventListener("touchend", endDrag);
-  }
-
-  function onDrag(e) {
-    if (!draggedItem) return;
-
-    const y = e.touches ? e.touches[0].clientY : e.clientY;
-    draggedItem.style.position = "absolute";
-    draggedItem.style.zIndex = "1000";
-    draggedItem.style.pointerEvents = "none";
-    draggedItem.style.width = `${placeholder.offsetWidth}px`;
-    draggedItem.style.left = `${placeholder.getBoundingClientRect().left}px`;
-    draggedItem.style.top = `${y - placeholder.offsetHeight / 2}px`;
-
-    const entries = Array.from(container.children).filter(el => el !== draggedItem && el !== placeholder);
-
-    for (const entry of entries) {
-      const rect = entry.getBoundingClientRect();
-      const middleY = rect.top + rect.height / 2;
-
-      if (y < middleY) {
-        container.insertBefore(placeholder, entry);
-        break;
-      } else if (entry === entries[entries.length - 1]) {
-        container.appendChild(placeholder);
-      }
-    }
-  }
-
-  function endDrag() {
-    if (!draggedItem) return;
-
-    draggedItem.classList.remove("dragging-active");
-
-    draggedItem.style.position = "";
-    draggedItem.style.top = "";
-    draggedItem.style.left = "";
-    draggedItem.style.zIndex = "";
-    draggedItem.style.pointerEvents = "";
-    draggedItem.style.width = "";
-
-    container.insertBefore(draggedItem, placeholder);
-    placeholder.remove();
-    placeholder = null;
-    draggedItem = null;
-
-    document.removeEventListener("mousemove", onDrag);
-    document.removeEventListener("touchmove", onDrag);
-    document.removeEventListener("mouseup", endDrag);
-    document.removeEventListener("touchend", endDrag);
-
-    const newOrder = Array.from(container.children).map(el => el.dataset.user);
-    const title = taskDiv.dataset.title;
-    const date = taskDiv.dataset.date;
-    handleReorder(title, date, newOrder);
-  }
-}
 
 
 
